--- a/Lab12.build_log.htm
+++ b/Lab12.build_log.htm
@@ -10,8 +10,12 @@ Project File Date:  03/12/2014
 Build target 'Lab12'
 compiling TuningFork.c...
 linking...
-Program Size: Code=5452 RO-data=7336 RW-data=84 ZI-data=1756  
+Program Size: Code=5468 RO-data=7336 RW-data=84 ZI-data=1756  
 ".\Lab12.axf" - 0 Error(s), 0 Warning(s).
+b12_TuningFork\\Lab12.axf" 
+Connecting: Mode=JTAG, Speed=1000000Hz
+Connection failed!, error code=&d
+Error: Flash Download failed  -  Target DLL has been cancelled
 Load "C:\\Keil\\Labware\\Lab12_TuningFork\\Lab12.axf" 
 Connecting: Mode=JTAG, Speed=1000000Hz
 Erase Done.
